Parishioners and marriages page update
